tests/paczka1/small_fuzzy/62793567.err
Error in line 1: Zp49YH5l A221 97,6
Error in line 11: Zp49YH5l A569 58,6
Error in line 13: W2e A221 95,1
